--- a/color.html
+++ b/color.html
@@ -8,10 +8,10 @@
 <div id="app">
 
   <div :style="{ backgroundColor: selectedColor, minHeight: '100vh', padding: '20px' }">
-    <h1>โชว์สี</h1>
+    <h1>show color</h1>
 
     <form action="/action_page.php">
-      <label for="favcolor">เลือกสีที่ต้องการจะแสดง:</label>
+      <label for="favcolor">เลือกสีที่ต้องการ:</label>
       <input type="color" id="favcolor" name="favcolor" v-model="selectedColor"><br><br>
     </form>
   </div>
