--- a/News.html
+++ b/News.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News API Demo</title>
+    <title>News News API </title>
     <!-- เพิ่มไฟล์ Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
             margin: 0;
             padding: 0;
             display: flex;
@@ -20,7 +20,7 @@
 
         #app {
             text-align: center;
-            background-color: #fff;
+            background-color: #ffffff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -30,7 +30,7 @@
         }
 
         h1 {
-            color: #3498db;
+            color: #a61b1b;
             margin-bottom: 20px;
         }
 
@@ -67,7 +67,7 @@
             display: inline-block;
             padding: 8px 16px;
             margin-top: 10px;
-            background-color: #3498db;
+            background-color: #b42a2a;
             color: #fff;
             border-radius: 4px;
             transition: background-color 0.3s ease;
