--- a/bmi.html
+++ b/bmi.html
@@ -28,10 +28,12 @@
             text-align: center;
             color: #333;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* เพิ่มเงาให้กับข้อความ */
+            margin-bottom: 20px;
         }
 
         form {
             text-align: center;
+            margin-bottom: 20px;
         }
 
         label {
@@ -41,8 +43,8 @@
         }
 
         input[type="number"] {
-            width: 100%;
-            padding: 8px;
+            width: calc(100% - 20px); /* ปรับขนาด input ให้พอดีกับ container */
+            padding: 10px;
             margin-bottom: 16px;
             border: 1px solid #ccc;
             border-radius: 4px;
@@ -50,9 +52,9 @@
         }
 
         input[type="submit"] {
-            width: 100%;
+            width: calc(100% - 20px); /* ปรับขนาดปุ่มให้พอดีกับ container */
             padding: 10px;
-            background-color: #fc5185; /* เปลี่ยนสีปุ่ม Calculate BMI */
+            background-color: #4caf50;
             color: #fff;
             border: none;
             border-radius: 4px;
@@ -60,7 +62,7 @@
         }
 
         input[type="submit"]:hover {
-            background-color: #ff6f61; /* เปลี่ยนสีปุ่มเมื่อ hover */
+            background-color: #45a049;
         }
 
         #result {
@@ -100,37 +102,45 @@
 </head>
 <body>
 
+<div id="app">
     <div id="container">
-        <h1>BMI Calculator</h1>
+        <h1>BMI Teerasak</h1>
 
-        <form id="bmiForm">
+        <form @submit.prevent="calculateBMI">
             <label for="height">Height (cm):</label>
-            <input type="number" id="height" name="height" placeholder="Enter your height in centimeters" required><br>
+            <input type="number" id="height" v-model.number="height" placeholder="Enter your height in centimeters" required><br>
 
             <label for="weight">Weight (kg):</label>
-            <input type="number" id="weight" name="weight" placeholder="Enter your weight in kilograms" required data-bmi=""><br>
+            <input type="number" id="weight" v-model.number="weight" placeholder="Enter your weight in kilograms" required><br>
 
             <input type="submit" value="Calculate BMI">
         </form>
 
-        <div id="result">
-            <!-- ผลลัพธ์จะแสดงที่นี่ -->
+        <div id="result" v-if="bmi !== null">
+            Your BMI is: {{ bmi.toFixed(2) }}
         </div>
-
-        <!-- เพิ่มไอคอนหรือภาพพื้นหลัง -->
-        <p style="text-align: center;"><a href="https://www.youtube.com/watch?v=2SPFb8u0zG8">เพลงแนะนำ</a></p>
     </div>
+</div>
 
-    <script>
-        document.getElementById('bmiForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            var height = parseFloat(document.getElementById('height').value);
-            var weight = parseFloat(document.getElementById('weight').value);
-            var bmi = (weight / ((height/100) * (height/100))).toFixed(2);
-            document.getElementById('weight').setAttribute('data-bmi', bmi);
-            document.getElementById('result').innerHTML = 'BMI: ' + bmi;
-        });
-    </script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            height: null,
+            weight: null,
+            bmi: null
+        },
+        methods: {
+            calculateBMI() {
+                const heightInMeters = this.height / 100;
+                this.bmi = this.weight / (heightInMeters * heightInMeters);
+            }
+        }
+    });
+</script>
 
 </body>
 </html>
